Přepis linků na login.php, registration.php a my-account.php

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -33,8 +33,8 @@
                 </form>
 
                 <div id="account-buttons">
-                    <a id="header-login-button" class="header-acc-btn header-link" href="login.html"><div class="header-acc-btn-div">Přihlášení</div></a>
-                    <a id="header-signup-button" class="header-acc-btn header-link" href="registration.html"><div class="header-acc-btn-div">Registrace</div></a>
+                    <a id="header-login-button" class="header-acc-btn header-link" href="login.php"><div class="header-acc-btn-div">Přihlášení</div></a>
+                    <a id="header-signup-button" class="header-acc-btn header-link" href="registration.php"><div class="header-acc-btn-div">Registrace</div></a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
                 <li><a class="footer-nav-link" href="./index.html">Domů</a></li>
                 <li><a class="footer-nav-link" href="./stock-exchange.html">Burza</a></li>
                 <li><a class="footer-nav-link" href="./contact.html">Kontakt</a></li>
-                <li><a class="footer-nav-link" href="./my-account.html">Můj účet</a></li>
+                <li><a class="footer-nav-link" href="./my-account.php">Můj účet</a></li>
             </ul>
         </div>
         <hr class="solid">
